syntax = "proto3";
package dogmatiq.enginekit.enginetest;

option go_package = "github.com/dogmatiq/enginekit/enginetest/internal/testapp";

import "github.com/dogmatiq/enginekit/enginetest/internal/action/action.proto";

message IntegrationCommandA {
  bool is_invalid = 1;
  repeated Action actions = 2;
}

message IntegrationCommandB {
  bool is_invalid = 1;
  repeated Action actions = 2;
}

message IntegrationEventA { string value = 1; }
message IntegrationEventB { string value = 1; }
